# wasm-player

./: README.md
any-test/: README.md  package-lock.json  package.json  vue.config.js
any-test/public/: index.html
any-test/public/js/: dmath.wasm  ema-ws-decoder.js  ema-ws-decoder.wasm  ema-ws-decoder.worker.js  test-sdl.wasm  ws-player.worker.js  ws-player.worker.mjs
any-test/src/: App.vue
any-test/src/components/: HelloWorld.vue  dmath.vue
any-test/src/components/test-sdl/: sdl-wasm-wrapper.vue  test-sdl.vue
any-test/src/components/test-webgl/: DVideoRenderer.vue  ws-player.vue
any-test/src/components/test-ws-player/: test-ws-player.vue  ws-player-wrapper.vue
any-test/src/plugins/: vuetify.js
any-test/src/router/: index.js
any-test/src/wasm/: dmath.js  test-sdl.js  ws-player.js
ws-player/: .gitignore  CMakeLists.txt  README.md  package-lock.json
ws-player/src/: DMediaDecoder.cpp  DMediaDecoder.h  DMediaRenderer.cpp  DMediaRenderer.h  def_stru.h  main.cpp  utils.cpp  utils.h
ws-server/: CMakeLists.txt  README.md
ws-server/src/: ffmpeg_pull.cpp  ffmpeg_pull.h  main.cpp  singleton.h  wrapper.cpp  wrapper.h  ws_service.cpp  ws_service.h  wss_service.cpp  wss_service.h
